fixed spacing in bid box

--- a/frontend/src/pages/ProductPage.module.css
+++ b/frontend/src/pages/ProductPage.module.css
@@ -163,7 +163,7 @@
   /* background-color: #e1bee7; */
   justify-content: center;
   align-items: center;
-
+  gap: 1rem;
   border-style: none;
 
   .bidPrice {
